# Tau2-Adv-Bench

./: .gitignore  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.txt  GETTING_STARTED.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/domains/airline/: tasks_adversarial.json
data/domains/retail/: tasks_adversarial.json
data/domains/telecom/: tasks_adversarial.json
docs/: FRAMEWORK_GUIDE.md
src/tau_adversarial/: __init__.py  adversarial_user.py  evaluator_safety.py  run_adversarial.py  strategies.py  tasks.py
tests/: __init__.py  test_adversarial.py
